v? - ?
- added alias wait_for to use instead of the more cumbersome wait_for_existence_of

v0.1.12 - 2011/4/26
- fixing issue with wait_for_window sometimes not timing out - raised by mrwizard82d1
- using (:how_many => :all) when getting elements will always return an array, even when no matching elements are found
- comboboxes and list boxes that contain no items will now return an array (instead of nil) when asked for their items
- adding 'next_sibling' and 'previous_sibling' methods to Bewildr::Element

v0.1.11 - 2011/2/10
- tweek to make bewildr work with IronRuby 1.1.2

v0.1.10 - 2011/2/8
- adding height and width methods to Bewildr::Element
- changed additions to not use instance_eval. Should make the rdoc useful!
- fixed bug where tree didn't load invisible items
- added tons of rdoc

v0.1.9 - 2011/1/20
- fixed bug when checking for selected list items when none are selected
- now dependent on active_support gem (as a result of dynamic [Type]Additions, err, addition!)
- added proc_id and name methods to Application
- added new Bewildr::Mouse class for clicking, right clicking, double clicking and dragging
- added drag-and-drop, with thanks to Neil Danson!
- cleaned up toggle button interaction

v0.1.8 - 2010/12/08
- added visible? method to element. Don't expect too much from this
- started documenting the code

v0.1.7 - 2010/11/27
- fixed bug with entering new lines into text fields
- can now start apps with command line args
- can now navigate the object hierarchy: added root?, has_children?, children and parent methods to element
- element building innards reworked. now extends elements based on supported patterns

v0.1.6 - 2010/7/20
- added scroll interaction
- added prepare_element
- loads all items from list/tree if scrolling is necessary (to get around ms ui automation weirdness)

v0.1.5 skipped - screwed up the tags, so skipping this version to avoid confusion

v0.1.4 - 2010/7/11
- renamed is_password_field? to password_field?